# DL2_Save_Editor_DevTool

./: README.md
.github/workflows/: rust.yml
save-devtool/: .gitignore  Cargo.toml
save-devtool/IDs/: Ammo.txt  Collectable.txt  CraftPart.txt  Firearm.txt  IDs.xlsx  ItemBundle.txt  LootPack.txt  Melee.txt  Other.txt  OutfitPart.txt  Powerup.txt  Throwable.txt  ThrowableLiquid.txt  Token.txt  Uncategorized.txt  Valuable.txt  new_item_ids.txt
save-devtool/src/: application_logic.rs  commands.rs  logger.rs  main.rs
save-devtool/src/arguments/: base_argument.rs  debug_argument.rs  decompress_argument.rs  help_argument.rs  mod.rs  path_argument.rs
save-devtool/src/commands/: analyse_command.rs  command_functions.rs  help_command.rs  mod.rs  supported_commands.rs
save-devtool/src/save_logic/: crc_checker.rs  file_analizer.rs  file_analyser.rs  mod.rs  struct_data.rs  test_saves.rs
