[package]
name = "save-devtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
regex = "1.10.2"
dotenv = "0.15.0"
flate2 = "1.0.28"
term = "0.7.0" # Used for coloring the terminal: https://docs.rs/term/latest/term/ https://mmstick.gitbooks.io/rust-programming-phoronix-reader-how-to/content/chapter11.html
shell-words = "1.1.0"
termion = "3.0.0"
